tests/paczka1/small_fuzzy/45692058.err
Error in line 1: xD1z A750 68,0
Error in line 3: DiM A778 73,5
Error in line 5: A822 A822 44,1
Error in line 15: A822 A778 69,14
